--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,21 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+<!--        <item name="android:textSize">18sp</item>-->
     </style>
+
+<!--    <style name="ResultText" parent="TextAppearance.MaterialComponents.Body1">-->
+<!--    </style>-->
+
+<!--    <style name="ResultTextLabel" parent="ResultText">-->
+<!--        <item name="android:textStyle">bold</item>-->
+<!--    </style>-->
+
+<!--    <style name="ResultTextValue" parent="ResultText">-->
+<!--    </style>-->
 
 </resources>
