--- a/app/src/main/res/layout/list_item_result.xml
+++ b/app/src/main/res/layout/list_item_result.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="itemLabel" type="String"/>
-        <variable name="itemValue" type="String"/>
+
+        <variable
+            name="itemLabel"
+            type="String" />
+
+        <variable
+            name="itemValue"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,11 +21,11 @@
 
         <TextView
             android:id="@+id/labelTextView"
+            style="@style/ResultTextLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:text="@{itemLabel}"
+            tools:text="List item label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +33,12 @@
 
         <TextView
             android:id="@+id/valueTextView"
-            android:text="@{itemValue}"
+            style="@style/ResultTextValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@{itemValue}"
+            tools:text="List item value"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
