--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,17 +5,22 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-<!--        <item name="android:textSize">18sp</item>-->
+        <item name="android:textSize">18sp</item>
     </style>
 
-<!--    <style name="ResultText" parent="TextAppearance.MaterialComponents.Body1">-->
-<!--    </style>-->
+    <style name="ResultText" parent="TextAppearance.MaterialComponents.Body1">
+    </style>
 
-<!--    <style name="ResultTextLabel" parent="ResultText">-->
-<!--        <item name="android:textStyle">bold</item>-->
-<!--    </style>-->
+    <style name="ResultTextHeader" parent="ResultText">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
+    </style>
 
-<!--    <style name="ResultTextValue" parent="ResultText">-->
-<!--    </style>-->
+    <style name="ResultTextLabel" parent="ResultText">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ResultTextValue" parent="ResultText">
+    </style>
 
 </resources>
